# astro_bot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  PLAN_EVENTS_SERVICE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
astro_bot/: __main__.py  config.py  db.py  db_queries.py  templates.py  timezones.py
astro_bot/handlers/: autosend_events.py  get_specific_date_event.py  image_of_the_day.py  specific_date.py  start.py  today.py  tomorrow.py  week.py  yesterday.py
astro_bot/keyboards/: inline_keyboard.py  reply_keyboard.py
astro_bot/services/: events.py  ics_feed.py  nasa.py  users.py  weather.py
tests/: test_day_message.py  test_events_db.py  test_ics_feed.py  test_messages.py  test_users.py  test_weather.py
tests/fixtures/: newscal_2026.ics  open_meteo.json
