[project]
name = "astro-bot"
version = "0.1.0"
description = ""
authors = [{ name = "igor" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "aiogram>=2.25.1,<3",
    "bs4>=0.0.1",
    "requests>=2.28.2,<3",
    "pytz>=2022.7.1",
    "python-dotenv>=1.0.0,<2",
    "timezonefinder>=6.2",
    "icalendar>=7.2.0",
]

[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astro_bot"]
